css/mid.css
.text-appear{
    font-size: calc(10px + 2vw);
    text-align: center;
    font-family: monospace;
    letter-spacing: .15em;
    margin: 10% auto 3% auto;
    overflow: hidden;
    white-space: nowrap;
    animation: typing 4s steps(40, end);
    width: 0;
    animation-fill-mode: forwards;
}

#skills{
    margin: 5% 0 0 0;
    display: none;
    color: white;
}

.hd1{
    font-size: calc(8px + 1.3vw);
    margin-left: 5%;
}

.hd2{
    margin-top: 2%;
    font-size: calc(6px + 1vw);
    width: 70%;
    margin-left: 5%;
}

#know-more {
  position: absolute;
  bottom: 0;
  font-size: calc(10px + 1vw);
  font-family: monospace;
  margin: 0 0 5% 45%;
  transform: translate(-50%, -50%);
  width: 8em;
}

#know-more a{
  color: #e96232;
  text-decoration: none;
  text-align: center;
  border: 2px solid #e96232;
  padding: 0.5em 1em;
  display: block;
  border-radius: 0.3em;
  transition: all 0.2s ease-in-out;
  position: relative;
  overflow: hidden;
}

#know-more a:before{
    content: "";
    background-color: rgba(255,255,255,0.5);
    height: 100%;
    width: 2em;
    position: absolute;
    top: 0;
    left: -4.5em;
    transform: skewX(-45deg) translateX(0);
    transition: none;
}

#know-more a:hover{
    background-color: #e96232;
    color: #fff;
    border-bottom: 4px solid darken(#e96232, 10%);
}
#know-more a:hover:before{
    transform: skewX(-45deg) translateX(13.5em);
    transition: all 0.5s ease-in-out;
}

.container{
  display: flex;
}

@keyframes shine {
    0% {
        transform: skewY(-45deg) translateX(0);
    }
    100% {
        transform: skewY(-45deg) translateX(12.5em);
    }
}


@keyframes typing {
    from {width: 0}
    to {width: 100%}
}

@media screen and (max-width: 1024px){
    .text-appear{
      margin-top: 10%;
    }
    #skills{
      margin-top: 10%;
    }
}

@media screen and (max-width: 500px){
    .text-appear{
      margin-top: 10vh;
    }
    #skills{
      margin-top: 20%;
    }
}

